// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > review > postReviewRole > audit > expected call 1`] = `
{
  "name": "Reviewer",
  "shortName": "reviewer",
  "systemRole": "Contributor",
}
`;

exports[`routes > review > postReviewRole > creates and returns new review role 1`] = `
{
  "reviewRole": {
    "name": "Reviewer",
    "shortName": "reviewer",
    "systemRole": "Contributor",
  },
}
`;
